--- a/package.json
+++ b/package.json
@@ -16,12 +16,22 @@
     "vercel-build": "npx prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^2.2.13",
+    "@mantine/carousel": "^7.10.1",
+    "@mantine/core": "^7.10.1",
+    "@mantine/dates": "^7.10.1",
+    "@mantine/form": "^7.10.1",
+    "@mantine/hooks": "^7.10.1",
+    "@mantine/modals": "^7.10.1",
+    "@mantine/notifications": "^7.10.1",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.39.0",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "dayjs": "^1.11.11",
+    "embla-carousel-react": "^8.1.3",
     "geist": "^1.3.0",
     "next": "^14.2.1",
     "react": "^18.3.0",
@@ -39,6 +49,9 @@
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
     "prisma": "^5.14.0",
     "typescript": "^5.4.2"
   },
