--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-dom": "^18.3.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
-    "zod": "^3.23.3"
+    "zod": "^3.23.3",
+    "zod-prisma-types": "^3.1.6"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
