--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mantine/notifications": "^7.10.1",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tabler/icons-react": "^3.5.0",
     "@tanstack/react-query": "^5.39.0",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
