--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "vercel-build": "npx prisma migrate deploy && next build"
+    "vercel-build": "npx prisma migrate deploy && next build",
+    "postbuild": "node ./scripts/add-urls-to-kinde.js"
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.2.13",
