--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "vercel-build": "npx prisma migrate deploy && next build",
+    "vercel-build": "npx prisma migrate deploy && next build && node ./scripts/add-urls-to-kinde.js",
     "postbuild": "node ./scripts/add-urls-to-kinde.js"
   },
   "dependencies": {
