--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/nodemailer": "^6.4.15",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.3",
     "geist": "^1.3.0",
     "next": "^14.2.1",
+    "nodemailer": "^6.9.13",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "server-only": "^0.0.1",
