--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "geist": "^1.3.0",
     "next": "^14.2.1",
     "nodemailer": "^6.9.13",
+    "openai": "^4.52.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "server-only": "^0.0.1",
