update vercel json:

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "functions": {
     "app/api/**/*": {
       "maxDuration": 55
+    },
+    "server/api/**/*": {
+      "maxDuration": 55
     }
   }
 }
