--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "functions": {
-    "*": {
+    "app/api/**/*": {
+      "maxDuration": 55
+    },
+    "src/server/api/**/*": {
       "maxDuration": 55
     }
   }
